target/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'void'", "'auto'", "'integer'", "'float'", "'boolean'", 
                     "'string'", "'array'", "'inherit'", "'function'", "'true'", 
                     "'false'", "'for'", "'while'", "'do'", "'break'", "'continue'", 
                     "'return'", "'if'", "'else'", "'of'", "'out'", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'::'", 
                     "'.'", "','", "';'", "':'", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "WS", "CCOMMENT", "CPPCOMMENT", "KWVOID", 
                      "KWAUTO", "KWINT", "KWFLOAT", "KWBOO", "KWSTR", "KWARR", 
                      "KWINHERIT", "KWFUNC", "KWTRUE", "KWFALSE", "KWFOR", 
                      "KWWHILE", "KWDO", "KWBRK", "KWCONT", "KWRTN", "KWIF", 
                      "KWELSE", "KWOF", "KWOUT", "ID", "ADDOP", "SUBOP", 
                      "MULOP", "DIVOP", "MODOP", "EXCOP", "ANDOP", "OROP", 
                      "EQLOP", "DIFOP", "LARGEOP", "LEQLOP", "SMALLOP", 
                      "SEQLOP", "CONCATOP", "DOT", "CM", "SM", "CL", "LB", 
                      "RB", "LSB", "RSB", "LCB", "RCB", "EQL", "LITINT", 
                      "LITFLOAT", "LITBOO", "LITSTR", "ERROR_CHAR", "NCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_declist = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_idlist = 4
    RULE_ids = 5
    RULE_vartyp = 6
    RULE_idxlist = 7
    RULE_idxs = 8
    RULE_idx = 9
    RULE_arraylist = 10
    RULE_arrays = 11
    RULE_array = 12
    RULE_funcdecl = 13
    RULE_paralist = 14
    RULE_paras = 15
    RULE_para = 16
    RULE_functyp = 17
    RULE_bodylist = 18
    RULE_bodydecl = 19
    RULE_stmt = 20
    RULE_assignstmt = 21
    RULE_ifstmt = 22
    RULE_matchstmt = 23
    RULE_unmatchstmt = 24
    RULE_breakstmt = 25
    RULE_continuestmt = 26
    RULE_rtnstmt = 27
    RULE_callstmt = 28
    RULE_blockstmt = 29
    RULE_exprlist = 30
    RULE_exprs = 31
    RULE_expr = 32
    RULE_unexpr = 33
    RULE_unexpr1 = 34
    RULE_unexpr2 = 35
    RULE_idxop = 36
    RULE_biexpr = 37
    RULE_biexpr1 = 38
    RULE_biexpr2 = 39
    RULE_biexpr3 = 40
    RULE_biexpr4 = 41
    RULE_operand = 42
    RULE_subexpr = 43

    ruleNames =  [ "program", "declist", "decl", "vardecl", "idlist", "ids", 
                   "vartyp", "idxlist", "idxs", "idx", "arraylist", "arrays", 
                   "array", "funcdecl", "paralist", "paras", "para", "functyp", 
                   "bodylist", "bodydecl", "stmt", "assignstmt", "ifstmt", 
                   "matchstmt", "unmatchstmt", "breakstmt", "continuestmt", 
                   "rtnstmt", "callstmt", "blockstmt", "exprlist", "exprs", 
                   "expr", "unexpr", "unexpr1", "unexpr2", "idxop", "biexpr", 
                   "biexpr1", "biexpr2", "biexpr3", "biexpr4", "operand", 
                   "subexpr" ]

    EOF = Token.EOF
    WS=1
    CCOMMENT=2
    CPPCOMMENT=3
    KWVOID=4
    KWAUTO=5
    KWINT=6
    KWFLOAT=7
    KWBOO=8
    KWSTR=9
    KWARR=10
    KWINHERIT=11
    KWFUNC=12
    KWTRUE=13
    KWFALSE=14
    KWFOR=15
    KWWHILE=16
    KWDO=17
    KWBRK=18
    KWCONT=19
    KWRTN=20
    KWIF=21
    KWELSE=22
    KWOF=23
    KWOUT=24
    ID=25
    ADDOP=26
    SUBOP=27
    MULOP=28
    DIVOP=29
    MODOP=30
    EXCOP=31
    ANDOP=32
    OROP=33
    EQLOP=34
    DIFOP=35
    LARGEOP=36
    LEQLOP=37
    SMALLOP=38
    SEQLOP=39
    CONCATOP=40
    DOT=41
    CM=42
    SM=43
    CL=44
    LB=45
    RB=46
    LSB=47
    RSB=48
    LCB=49
    RCB=50
    EQL=51
    LITINT=52
    LITFLOAT=53
    LITBOO=54
    LITSTR=55
    ERROR_CHAR=56
    NCLOSE_STRING=57
    ILLEGAL_ESCAPE=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declist(self):
            return self.getTypedRuleContext(MT22Parser.DeclistContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.declist()
            self.state = 89
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def declist(self):
            return self.getTypedRuleContext(MT22Parser.DeclistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclist" ):
                return visitor.visitDeclist(self)
            else:
                return visitor.visitChildren(self)




    def declist(self):

        localctx = MT22Parser.DeclistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declist)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.decl()
                self.state = 92
                self.declist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def vartyp(self):
            return self.getTypedRuleContext(MT22Parser.VartypContext,0)


        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def EQL(self):
            return self.getToken(MT22Parser.EQL, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MT22Parser.ExprlistContext,0)


        def KWAUTO(self):
            return self.getToken(MT22Parser.KWAUTO, 0)

        def KWARR(self):
            return self.getToken(MT22Parser.KWARR, 0)

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def idxlist(self):
            return self.getTypedRuleContext(MT22Parser.IdxlistContext,0)


        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def KWOF(self):
            return self.getToken(MT22Parser.KWOF, 0)

        def arraylist(self):
            return self.getTypedRuleContext(MT22Parser.ArraylistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.idlist()
                self.state = 102
                self.match(MT22Parser.CL)
                self.state = 103
                self.vartyp()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.EQL:
                    self.state = 104
                    self.match(MT22Parser.EQL)
                    self.state = 105
                    self.exprlist()


                self.state = 108
                self.match(MT22Parser.SM)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.idlist()
                self.state = 111
                self.match(MT22Parser.CL)
                self.state = 112
                self.match(MT22Parser.KWAUTO)
                self.state = 113
                self.match(MT22Parser.EQL)
                self.state = 114
                self.exprlist()
                self.state = 115
                self.match(MT22Parser.SM)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.idlist()
                self.state = 118
                self.match(MT22Parser.CL)
                self.state = 119
                self.match(MT22Parser.KWARR)
                self.state = 120
                self.match(MT22Parser.LSB)
                self.state = 121
                self.idxlist()
                self.state = 122
                self.match(MT22Parser.RSB)
                self.state = 123
                self.match(MT22Parser.KWOF)
                self.state = 124
                self.vartyp()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.EQL:
                    self.state = 125
                    self.match(MT22Parser.EQL)
                    self.state = 126
                    self.arraylist()


                self.state = 129
                self.match(MT22Parser.SM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def ids(self):
            return self.getTypedRuleContext(MT22Parser.IdsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_idlist)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(MT22Parser.ID)
                self.state = 134
                self.ids()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def ids(self):
            return self.getTypedRuleContext(MT22Parser.IdsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_ids

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIds" ):
                return visitor.visitIds(self)
            else:
                return visitor.visitChildren(self)




    def ids(self):

        localctx = MT22Parser.IdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ids)
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(MT22Parser.CM)
                self.state = 139
                self.match(MT22Parser.ID)
                self.state = 140
                self.ids()
                pass
            elif token in [MT22Parser.CL]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VartypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KWINT(self):
            return self.getToken(MT22Parser.KWINT, 0)

        def KWFLOAT(self):
            return self.getToken(MT22Parser.KWFLOAT, 0)

        def KWBOO(self):
            return self.getToken(MT22Parser.KWBOO, 0)

        def KWSTR(self):
            return self.getToken(MT22Parser.KWSTR, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vartyp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVartyp" ):
                return visitor.visitVartyp(self)
            else:
                return visitor.visitChildren(self)




    def vartyp(self):

        localctx = MT22Parser.VartypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vartyp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.KWINT) | (1 << MT22Parser.KWFLOAT) | (1 << MT22Parser.KWBOO) | (1 << MT22Parser.KWSTR))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdxlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idx(self):
            return self.getTypedRuleContext(MT22Parser.IdxContext,0)


        def idxs(self):
            return self.getTypedRuleContext(MT22Parser.IdxsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idxlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdxlist" ):
                return visitor.visitIdxlist(self)
            else:
                return visitor.visitChildren(self)




    def idxlist(self):

        localctx = MT22Parser.IdxlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_idxlist)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.idx()
                self.state = 147
                self.idxs()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.idx()
                self.text = self.text.replace('_','')
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdxsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def idx(self):
            return self.getTypedRuleContext(MT22Parser.IdxContext,0)


        def idxs(self):
            return self.getTypedRuleContext(MT22Parser.IdxsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idxs

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdxs" ):
                return visitor.visitIdxs(self)
            else:
                return visitor.visitChildren(self)




    def idxs(self):

        localctx = MT22Parser.IdxsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_idxs)
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(MT22Parser.CM)
                self.state = 155
                self.idx()
                self.state = 156
                self.idxs()
                pass
            elif token in [MT22Parser.RSB]:
                self.enterOuterAlt(localctx, 2)
                self.text = self.text.replace('_','')
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LITINT(self):
            return self.getToken(MT22Parser.LITINT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_idx

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdx" ):
                return visitor.visitIdx(self)
            else:
                return visitor.visitChildren(self)




    def idx(self):

        localctx = MT22Parser.IdxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_idx)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(MT22Parser.LITINT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraylistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array(self):
            return self.getTypedRuleContext(MT22Parser.ArrayContext,0)


        def arrays(self):
            return self.getTypedRuleContext(MT22Parser.ArraysContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arraylist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraylist" ):
                return visitor.visitArraylist(self)
            else:
                return visitor.visitChildren(self)




    def arraylist(self):

        localctx = MT22Parser.ArraylistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arraylist)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.array()
                self.state = 164
                self.arrays()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.array()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraysContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def array(self):
            return self.getTypedRuleContext(MT22Parser.ArrayContext,0)


        def arrays(self):
            return self.getTypedRuleContext(MT22Parser.ArraysContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrays

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrays" ):
                return visitor.visitArrays(self)
            else:
                return visitor.visitChildren(self)




    def arrays(self):

        localctx = MT22Parser.ArraysContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arrays)
        try:
            self.state = 174
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.match(MT22Parser.CM)
                self.state = 170
                self.array()
                self.state = 171
                self.arrays()
                pass
            elif token in [MT22Parser.SM]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(MT22Parser.LCB, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MT22Parser.ExprlistContext,0)


        def RCB(self):
            return self.getToken(MT22Parser.RCB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = MT22Parser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(MT22Parser.LCB)
            self.state = 177
            self.exprlist()
            self.state = 178
            self.match(MT22Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def KWFUNC(self):
            return self.getToken(MT22Parser.KWFUNC, 0)

        def functyp(self):
            return self.getTypedRuleContext(MT22Parser.FunctypContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def paralist(self):
            return self.getTypedRuleContext(MT22Parser.ParalistContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def LCB(self):
            return self.getToken(MT22Parser.LCB, 0)

        def bodylist(self):
            return self.getTypedRuleContext(MT22Parser.BodylistContext,0)


        def RCB(self):
            return self.getToken(MT22Parser.RCB, 0)

        def KWINHERIT(self):
            return self.getToken(MT22Parser.KWINHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(MT22Parser.ID)
            self.state = 181
            self.match(MT22Parser.CL)
            self.state = 182
            self.match(MT22Parser.KWFUNC)
            self.state = 183
            self.functyp()
            self.state = 184
            self.match(MT22Parser.LB)
            self.state = 185
            self.paralist()
            self.state = 186
            self.match(MT22Parser.RB)
            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.KWINHERIT:
                self.state = 187
                self.match(MT22Parser.KWINHERIT)
                self.state = 188
                self.match(MT22Parser.ID)

